--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "solium": "^1.1.7",
     "truffle": "^5.0.22",
     "truffle-flattener": "^1.3.0",
-    "truffle-hdwallet-provider": "^1.0.0-web3one.3"
+    "truffle-hdwallet-provider": "^1.0.0-web3one.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "any-promise": "^1.3.0",
+    "bindings": "^1.5.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/droxey/rainbowcoin.git"
