--- a/package.json
+++ b/package.json
@@ -31,7 +31,14 @@
   },
   "dependencies": {
     "any-promise": "^1.3.0",
-    "bindings": "^1.5.0"
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "bindings": "^1.5.0",
+    "zeppelin-solidity": "^1.12.0"
   },
   "repository": {
     "type": "git",
