--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "bindings": "^1.5.0",
+    "eth-gas-reporter": "^0.2.1",
     "zeppelin-solidity": "^1.12.0"
   },
   "repository": {
