--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "rainbowcoin",
   "version": "1.0.0",
   "description": "",
+  "author": "Dani Roxberry <dani@makeschool.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/droxey/rainbowcoin.git"
+  },
+  "keywords": [
+    "truffle",
+    "ethereum",
+    "web3"
+  ],
+  "engines": {
+    "node": "10.16.0"
+  },
   "scripts": {
     "develop": "npx truffle develop",
     "compile": "npx truffle compile",
@@ -20,8 +34,6 @@
   "devDependencies": {
     "bignumber.js": "^8.0.1",
     "braces": "^3.0.2",
-    "dotenv": "^5.0.1",
-    "openzeppelin-solidity": "2.1.3",
     "prettier": "^1.15.3",
     "prettier-plugin-solidity-refactor": "^1.0.0-alpha.14",
     "solium": "^1.1.7",
@@ -38,18 +50,9 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "bindings": "^1.5.0",
+    "dotenv": "^8.0.0",
     "eth-gas-reporter": "^0.2.1",
+    "openzeppelin-solidity": "2.1.3",
     "zeppelin-solidity": "^1.12.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/droxey/rainbowcoin.git"
-  },
-  "keywords": [
-    "truffle",
-    "ethereum",
-    "web3"
-  ],
-  "author": "Dani Roxberry <dani@makeschool.com>",
-  "license": "MIT"
+  }
 }
