--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "^8.0.0",
     "eth-gas-reporter": "^0.2.1",
     "openzeppelin-solidity": "2.1.3",
+    "truffle-plugin-verify": "^0.2.2",
     "zeppelin-solidity": "^1.12.0"
   }
 }
